package onchainmetadata;
syntax = "proto3";

enum Gender {
    /// {"cn": "男性", "en": "Male", "ru": "Мужчина"}
    Male = 0;
    /// {"cn": "女性", "en": "Female", "ru": "Женщина"}
    Female = 1;
};

enum PunkTrait {
    /// {"cn": "黑唇", "en": "Black Lipstick", "ru": "Чёрная помада"}
    BLACK_LIPSTICK = 0;
    /// {"cn": "红唇", "en": "Red Lipstick", "ru": "Красная помада"}
    RED_LIPSTICK = 1;
    /// {"cn": "笑脸", "en": "Smile", "ru": "Улыбка"}
    SMILE = 2;
    /// {"cn": "露齿笑脸", "en": "Teeth Smile", "ru": "Улыбка с зубами"}
    TEETH_SMILE = 3;
    /// {"cn": "紫唇", "en": "Purple Lipstick", "ru": "Фиолетовая помада"}
    PURPLE_LIPSTICK = 4;
    /// {"cn": "鼻环", "en": "Nose Ring", "ru": "Пирсинг в носу"}
    NOSE_RING = 5;
    /// {"cn": "亚洲眼", "en": "Asian Eyes", "ru": "Азиатский тип глаз"}
    ASIAN_EYES = 6;
    /// {"cn": "太阳镜", "en": "Sunglasses", "ru": "Солнечные очки"}
    SUNGLASSES = 7;
};

/// This is the root object of the schema, it will always be called "NFTMeta"
message NFTMeta {
    required Gender gender = 1;
    repeated PunkTrait traits = 2;
}